--- a/jni-test/app/build.gradle
+++ b/jni-test/app/build.gradle
@@ -14,6 +14,9 @@ android {
                 cppFlags "-std=c++0x"
             }
         }
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
     }
     buildTypes {
         release {
